@@ -72,4 +72,11 @@ L<Regexp::Log::Common>
 
 The initial development of this module was partially supported by Science Photo Library L<https://www.sciencephoto.com>.
 
+=head1 append:BUGS
+
+=head2 Reporting Security Vulnerabilities
+
+Security issues should not be reported on the bugtracker website. Please see F<SECURITY.md> for instructions how to
+report security vulnerabilities
+
 =cut
