@@ -4,5 +4,7 @@ Revision history for {{ $dist->name }}:
   [Documentation]
   - Fixed typo in SEE ALSO.
 
+  - Added a security policy.
+
 v0.1.0    2024-02-09 15:10:37+00:00 Europe/London
   - Initial version released.
